# EmbeddedWorld

./: .gitignore
EmbeddedLinux/Dosx_os_lab/: OS_Day1_Process_Observation.odt  OS_Day2_System_Calls_Stracelab.odt
EmbeddedLinux/os_lab/week1/day1/: process_observe  process_observe.c
EmbeddedLinux/os_lab/week1/day2/: Demo  Demo.c  Experiment1  Experiment1.c  Experiment2  Experiment2.c  Experiment3  Experiment3.c
IoT_Security/Project1/cypherock-ecdsa-auth/: CMakeLists.txt
IoT_Security/Project1/cypherock-ecdsa-auth/client/: main.cpp
IoT_Security/Project1/cypherock-ecdsa-auth/common/: auth.pb.c  auth.pb.h  crypto_util.c  crypto_util.h  pb_helpers.hpp  pb_io.hpp
IoT_Security/Project1/cypherock-ecdsa-auth/proto/: auth.proto  generate_nanopb.sh  nanopb.options
IoT_Security/Project1/cypherock-ecdsa-auth/server/: main.cpp
